--- a/MSReportViewer/MSReportViewer/Reports/colsgroup.rdlc
+++ b/MSReportViewer/MSReportViewer/Reports/colsgroup.rdlc
@@ -119,18 +119,18 @@
   </Page>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
-    <DataSource Name="PayStubReport">
+    <DataSource Name="MSReportViewerModels">
       <ConnectionProperties>
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>a424265d-bc18-47d3-b5fa-48c5e4c76bbe</rd:DataSourceID>
+      <rd:DataSourceID>f1aab257-182c-4604-b868-8a39461f9c67</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="Columns">
       <Query>
-        <DataSourceName>PayStubReport</DataSourceName>
+        <DataSourceName>MSReportViewerModels</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
@@ -140,13 +140,13 @@
         </Field>
         <Field Name="Name">
           <DataField>Name</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
+          <rd:TypeName>System.Guid</rd:TypeName>
         </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>PayStubReport</rd:DataSetName>
-        <rd:TableName>Column</rd:TableName>
-        <rd:ObjectDataSourceType>PayStubReport.Column, PayStubReport, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
+        <rd:DataSetName>MSReportViewer.Models</rd:DataSetName>
+        <rd:TableName>Columns</rd:TableName>
+        <rd:ObjectDataSourceType>MSReportViewer.Models.Columns, MSReportViewer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
